--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -9,3 +9,11 @@ $gray_secondary: #ececec;
 $red_Wrong: #ff4b5c;
 
 $green_success: #00e676;
+
+$sidebar_color: #f7f6f4;
+
+$card_Border_color: #dfdfdf;
+
+$back_color: #fffefc;
+
+$button_primary: #36a6d6;
