--- a/src/styles/note_card.scss
+++ b/src/styles/note_card.scss
@@ -1,6 +1,30 @@
 @import "colors";
 @import "_helper";
 
-.note-card {
-    background-color: $orange_primary;
+.note_card {
+    border-radius: 0.5em;
+    margin: 0.5em;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    border: 0.1rem solid $card_Border_color;
+    background-color: #ffffff;
+
+    &-title {
+        padding-top: 0.5em;
+        margin: auto 0.2em;
+        word-wrap: break-word;
+    }
+
+    &-body {
+        margin: 0.8em;
+        margin-right: 0.2em;
+        margin-left: 0.2em;
+        font-size: small;
+        filter: opacity(50%);
+    }
+    &-buttons {
+        padding-bottom: 0.8em;
+        display: flex;
+        justify-content: space-around;
+    }
 }
