--- a/src/styles/side_bar.scss
+++ b/src/styles/side_bar.scss
@@ -2,31 +2,79 @@
 @import "helper";
 
 .side_bar {
-    background-color: $light_dark;
+    background-color: $sidebar_color;
     box-shadow: 0px 0px 1px black;
     height: 95%;
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
     position: relative;
+    align-items: center;
     transition: $main_transition;
+    width: $sidebar_main_width;
+    overflow: auto;
 }
 
 .side_bar--is-visible {
     visibility: visible;
-    width: $sidebar_main_width;
     left: 0;
+    // transform: translateX(0);
 }
+
 .side_bar--is-hidden {
     visibility: hidden;
-
+    // transform: translateX(-$main_transitio);
     left: -$sidebar_main_width;
+}
+
+.add_note {
+    &-button {
+        margin-top: 0.6em;
+        width: 80%;
+        z-index: 1;
+    }
+    &-container {
+        transition: 0.5s ease-in;
+        margin-top: 0.6em;
+        position: relative;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        width: 80%;
+
+        &--visible {
+            filter: opacity(100%);
+            top: 0;
+        }
+        &--hidden {
+            filter: opacity(0%);
+            top: -10%;
+        }
+        input {
+            width: 80%;
+            border-radius: 0.5em;
+            border: 0.1rem solid $card_Border_color;
+        }
+    }
+}
+.note_cards_container {
+    position: relative;
+    transition: 0.5s ease-in;
+    &--full_height {
+        top: -6%;
+    }
+    &--minimum_height {
+        top: 0;
+    }
 }
 @media screen and (max-width: 900px) {
     .side_bar--is-visible {
         visibility: visible;
-        width: 60%;
+        width: 80%;
         left: 0;
     }
     .side_bar--is-hidden {
         visibility: hidden;
-        left: -60%;
+        left: -80%;
     }
 }
