--- a/src/styles/content.scss
+++ b/src/styles/content.scss
@@ -36,3 +36,15 @@
         width: 20%;
     }
 }
+
+.ql-container {
+    // border-bottom-left-radius: 0.5em;
+    // border-bottom-right-radius: 0.5em;
+    background: #fefcfc;
+}
+.ql-snow.ql-toolbar {
+    display: block;
+    background: #eaecec;
+    // border-top-left-radius: 0.5em;
+    // border-top-right-radius: 0.5em;
+}
