--- a/src/styles/side_bar.scss
+++ b/src/styles/side_bar.scss
@@ -3,7 +3,7 @@
 
 .side_bar {
     background-color: $sidebar_color;
-    box-shadow: 0px 0px 1px black;
+    // box-shadow: 0px 0px 1px black;
     height: 95%;
     display: flex;
     flex-direction: column;
