--- a/src/styles/content.scss
+++ b/src/styles/content.scss
@@ -45,6 +45,6 @@
 .ql-snow.ql-toolbar {
     display: block;
     background: #eaecec;
-    // border-top-left-radius: 0.5em;
-    // border-top-right-radius: 0.5em;
+    border-top-left-radius: 0.5em;
+    border-top-right-radius: 0.5em;
 }
