--- a/src/styles/side_bar.scss
+++ b/src/styles/side_bar.scss
@@ -61,6 +61,7 @@
     position: relative;
     transition: 0.5s ease-in;
     display: flex;
+    width: 90%;
     flex-direction: column;
     align-items: center;
     justify-content: center;
